[package]
name = "toke"
version = "0.1.0"
edition = "2024"

[lib]
name = "toke"
crate-type = ["cdylib"]

# [package.metadata.maturin]
# module-name = "toke.toke_rs"

[dependencies]
jsonwebtoken = { version = "10.0", features = ["aws_lc_rs"] }
aws-lc-rs = { version = "=1.15.4", features = ["unstable"] }   # ML-DSA-65 is currently supported on the unstable branch

base64 = "0.22"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

pyo3 = { version = "0.27", features = ["extension-module", "abi3-py311"] }
pythonize = "0.27"


[profile.release]
opt-level = 3      # Max optimization
lto = "fat"          # Link Time Optimization (crucial for crypto)
codegen-units = 1   # Slower compile, faster code
panic = "abort"     # Remove stack unwinding overhead
strip = true        # Smaller binary size
