[package]
name = "toke"
edition = "2024"

[lib]
name = "toke"
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = { version = "10.0", features = ["aws_lc_rs"] }
aws-lc-rs = { version = "=1.15.4", features = ["unstable"] }   # ML-DSA-65 is currently supported on the unstable branch

base64 = "0.22"

serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

pyo3 = { version = "0.27", features = ["extension-module", "abi3-py311"] }
pythonize = "0.27"


[profile.release]
opt-level = 3       
lto = "fat"        
codegen-units = 1   
panic = "abort"     
strip = true        
