[package]
name = "webtoken"
edition = "2024"

[lib]
name = "webtoken"
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = { version = "10.0", features = ["aws_lc_rs"] }
aws-lc-rs = { version = "=1.15.4", features = ["unstable"] }   # ML-DSA-65 is currently supported on the unstable branch
ed448-goldilocks = "0.9.0"

base64 = "0.22"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# simple_asn1 = "0.6"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# sevenz-rust2 = "0.20"

pythonize = "0.27"

[dependencies.pyo3]
version = "0.27" 
features = ["extension-module", "abi3-py311", "py-clone", "time"] 



[profile.release]
opt-level = 3       
lto = "fat"        
codegen-units = 1   
panic = "abort"     
strip = true        
