[build-system]
requires = ["maturin>=1.11"]
build-backend = "maturin"

[project]
name = "webtoken"
version = "0.1.0"
description = "A Rust-backed JWT library"
readme = "README.md"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py311"]

# Ignore "key too short" warnings when running tests
[tool.pytest.ini_options]
filterwarnings = [
    "ignore"
]